--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -1,22 +1,17 @@
-.App {
-  text-align: center;
+body {
+  margin:10px;
+}
+h1 {
+  font-size:72pt;
+  font-weight:bold;
+  text-align:right;
+  letter-spacing:-8px;
+  color:#f0f0f0;
+  margin:-40px 0px;
+}
+p {
+    margin:0px;
+    color:#666;
+    font-size:16pt;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-}
